added generic redis template